FEAT: use .input-parent for showing error message

--- a/site/templates/twig/mar/armain/cmm/edit/.js.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/.js.twig
@@ -111,6 +111,9 @@ $(function() {
 		errorClass: "is-invalid",
 		validClass: "is-valid",
 		errorPlacement: function(error, element) {
+			if (element.hasParent('.input-parent')) {
+				element = element.closest('.input-parent');
+			}
 			error.insertAfter(element).addClass('invalid-feedback');
 		},
 		rules: {
