--- a/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
@@ -16,6 +16,9 @@ class CmmConfigs {
 			name: {
 				maxlength: {{ cmm.fieldAttribute('name', 'maxlength') }}
 			},
+			country: {
+				maxlength: {{ cmm.fieldAttribute('country', 'maxlength') }}
+			},
 		};
 	}
 }
