--- a/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
@@ -19,6 +19,9 @@ class CmmConfigs {
 			country: {
 				maxlength: {{ cmm.fieldAttribute('country', 'maxlength') }}
 			},
+			whseid: {
+				maxlength: {{ cmm.fieldAttribute('whseid', 'maxlength') }}
+			},
 		};
 	}
 }
