--- a/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
@@ -22,6 +22,9 @@ class CmmConfigs {
 			whseid: {
 				maxlength: {{ cmm.fieldAttribute('whseid', 'maxlength') }}
 			},
+			salesperson1: {
+				maxlength: {{ cmm.fieldAttribute('salesperson1', 'maxlength') }}
+			},
 		};
 	}
 }
