--- a/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
@@ -25,6 +25,9 @@ class CmmConfigs {
 			salesperson1: {
 				maxlength: {{ cmm.fieldAttribute('salesperson1', 'maxlength') }}
 			},
+			taxcode: {
+				maxlength: {{ cmm.fieldAttribute('taxcode', 'maxlength') }}
+			},
 		};
 	}
 }
