--- a/site/templates/twig/mar/armain/cmm/edit/form/taxes.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/taxes.twig
@@ -2,38 +2,42 @@
 	<div class="col-sm-3">
 		<label for="taxcode">Tax Code</label>
 	</div>
-	<div class="col-sm-3">
-		{% include 'util/bootstrap/form/input-group.twig' with {
-				'inputgroup': {
-					'type': 'prepend',
-					'size': 'sm',
-					'input': {
-						'name': 'taxcode',
-						'value': customer.taxcode,
-						'attributes': {
-							'placeholder': '',
-							'aria-label':  'Tax Code',
-							'data-jqv': 'true',
-							'data-describedby': '.taxcode-desc'
-						}
-					},
-					'button': {
-						'colorclass': 'btn-secondary',
-						'text': 'fa fa-search'|icon,
-						'attributes': {
-							'title': 'Search Tax Codes',
-							'data-toggle': 'modal',
-							'data-target': '#ajax-modal',
-							'data-lookupurl': page.searchLookupUrl('mar/mtm/'),
-							'data-input': '#taxcode'
+	<div class="col-sm-9">
+		<div class="row input-parent">
+			<div class="col-sm-4">
+				{% include 'util/bootstrap/form/input-group.twig' with {
+						'inputgroup': {
+							'type': 'prepend',
+							'size': 'sm',
+							'input': {
+								'name': 'taxcode',
+								'value': customer.taxcode,
+								'attributes': {
+									'placeholder': '',
+									'aria-label':  'Tax Code',
+									'data-jqv': 'true',
+									'data-describedby': '.taxcode-desc'
+								}
+							},
+							'button': {
+								'colorclass': 'btn-secondary',
+								'text': 'fa fa-search'|icon,
+								'attributes': {
+									'title': 'Search Tax Codes',
+									'data-toggle': 'modal',
+									'data-target': '#ajax-modal',
+									'data-lookupurl': page.searchLookupUrl('mar/mtm/'),
+									'data-input': '#taxcode'
+								}
+							}
 						}
 					}
-				}
-			}
-		%}
-	</div>
-	<div class="col-sm-5">
-		<p class="form-control-plaintext form-control-sm text-muted taxcode-desc">{{ cmm.descriptionTaxcode(customer.taxcode) }}</p>
+				%}
+			</div>
+			<div class="col-sm-4">
+				<p class="form-control-plaintext form-control-sm text-muted taxcode-desc">{{ cmm.descriptionTaxcode(customer.taxcode) }}</p>
+			</div>
+		</div>
 	</div>
 </div>
 
