--- a/site/templates/twig/mar/armain/cmm/edit/form/ar-codes.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/ar-codes.twig
@@ -24,6 +24,18 @@
 
 <div class="mb-2">
 	{% include 'mar/armain/cmm/edit/form/ar-code.twig' with {
+			'label': 'Type Code',
+			'name': 'typecode',
+			'value': customer.typecode,
+			'description': cmm.descriptionType(customer.typecode),
+			'searchTitleDescription': 'Type Code',
+			'ajaxLookupPath': 'mar/ctm'
+		}
+	%}
+</div>
+
+<div class="mb-2">
+	{% include 'mar/armain/cmm/edit/form/ar-code.twig' with {
 			'label': 'Price Code',
 			'name': 'pricecode',
 			'value': customer.pricecode,
