--- a/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/js/classes/Configs.js.twig
@@ -28,6 +28,21 @@ class CmmConfigs {
 			taxcode: {
 				maxlength: {{ cmm.fieldAttribute('taxcode', 'maxlength') }}
 			},
+			termscode: {
+				maxlength: {{ cmm.fieldAttribute('termscode', 'maxlength') }}
+			},
+			shipviacode: {
+				maxlength: {{ cmm.fieldAttribute('shipviacode', 'maxlength') }}
+			},
+			typecode: {
+				maxlength: {{ cmm.fieldAttribute('typecode', 'maxlength') }}
+			},
+			pricecode: {
+				maxlength: {{ cmm.fieldAttribute('pricecode', 'maxlength') }}
+			},
+			commcode: {
+				maxlength: {{ cmm.fieldAttribute('commcode', 'maxlength') }}
+			},
 		};
 	}
 }
