--- a/site/templates/twig/mar/armain/cmm/edit/form/ar-code.twig
+++ b/site/templates/twig/mar/armain/cmm/edit/form/ar-code.twig
@@ -2,36 +2,40 @@
 	<div class="col-sm-3">
 		<label for="{{ name }}">{{ label }}</label>
 	</div>
-	<div class="col-sm-3">
-		{% include 'util/bootstrap/form/input-group.twig' with {
-				'inputgroup': {
-					'type': 'prepend',
-					'size': 'sm',
-					'input': {
-						'name': name,
-						'value': value,
-						'attributes': {
-							'placeholder': '',
-							'aria-label':  label,
-							'data-jqv': 'true',
-						}
-					},
-					'button': {
-						'colorclass': 'btn-secondary',
-						'text': 'fa fa-search'|icon,
-						'attributes': {
-							'title': 'Search ' ~ searchTitleDescription,
-							'data-toggle': 'modal',
-							'data-target': '#ajax-modal',
-							'data-lookupurl': page.searchLookupUrl(ajaxLookupPath),
-							'data-input': '#' ~ name
+	<div class="col-sm-9">
+		<div class="row input-parent">
+			<div class="col-sm-4">
+				{% include 'util/bootstrap/form/input-group.twig' with {
+						'inputgroup': {
+							'type': 'prepend',
+							'size': 'sm',
+							'input': {
+								'name': name,
+								'value': value,
+								'attributes': {
+									'placeholder': '',
+									'aria-label':  label,
+									'data-jqv': 'true',
+								}
+							},
+							'button': {
+								'colorclass': 'btn-secondary',
+								'text': 'fa fa-search'|icon,
+								'attributes': {
+									'title': 'Search ' ~ searchTitleDescription,
+									'data-toggle': 'modal',
+									'data-target': '#ajax-modal',
+									'data-lookupurl': page.searchLookupUrl(ajaxLookupPath),
+									'data-input': '#' ~ name
+								}
+							}
 						}
 					}
-				}
-			}
-		%}
-	</div>
-	<div class="col-sm-5">
-		<p class="form-control-plaintext form-control-sm text-muted description">{{ description }}</p>
+				%}
+			</div>
+			<div class="col-sm-4">
+				<p class="form-control-plaintext form-control-sm text-muted description">{{ description }}</p>
+			</div>
+		</div>
 	</div>
 </div>
