FIX: convert to use InvL:otMaster

--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/details.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/details.twig
@@ -9,22 +9,18 @@
 <table class="table table-sm table-striped">
 	<tr>
 		<td>Item ID</td>
-		<td>{{ lotserial.itemid }}</td>
+		<td>{{ lot.itemid }}</td>
 	</tr>
 	<tr>
 		<td>Description</td>
-		<td>{{ lotserial.desc1 }}</td>
+		<td>{{ lot.item.description }}</td>
 	</tr>
 	<tr>
 		<td>Lot / Serial #</td>
-		<td>{{ lotserial.lotserial }}</td>
+		<td>{{ lot.lotnbr }}</td>
 	</tr>
 	<tr>
 		<td>Lot Ref</td>
-		<td>{{ lotserial.lotreference }}</td>
-	</tr>
-	<tr>
-		<td>Qty</td>
-		<td>{{ lotserial.qty }}</td>
+		<td>{{ lot.lotref }}</td>
 	</tr>
 </table>
