--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/display.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/display.twig
@@ -18,7 +18,7 @@
 	</div>
 	<div class="col-sm-6">
 		<div class="text-center">
-			<img src="{{ docm.getViewer().url(docm.getImageFilename(lotserial.lotserial)) }}" class="img-fluid" alt="{{ docm.getFolders().description(docm.getFolder()) ~ ' ' ~ lotserial.lotserial }}">
+			<img src="{{ docm.getViewer().url(docm.getImageFilename(lot.lotnbr)) }}" class="img-fluid" alt="{{ docm.getFolders().description(docm.getFolder()) ~ ' ' ~ lot.lotnbr }}">
 		</div>
 	</div>
 </div>
