--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/form.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/form.twig
@@ -8,7 +8,7 @@
 
 <form action="{{ input.url() }}" method="POST" enctype="multipart/form-data" id="img-form">
 	<input type="hidden" name="action" value="update">
-	<input type="hidden" name="lotserial" value="{{ lotserial.lotserial }}">
+	<input type="hidden" name="lotserial" value="{{ lot.lotnbr }}">
 
 	<div class="form-group">
 		<label for="image">Image</label>
