--- a/site/templates/twig/warehouse/inventory/mlot/img/lotserial/preview.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/lotserial/preview.twig
@@ -13,7 +13,7 @@
 			</div>
 			<img id="img-preview" class="card-img-top">
 			<div class="card-footer">
-				{{ lotserial.lotserial }}
+				{{ lot.lotnbr }}
 			</div>
 		</div>
 	</div>
