--- a/site/templates/twig/warehouse/inventory/mlot/img/scan/results/list.twig
+++ b/site/templates/twig/warehouse/inventory/mlot/img/scan/results/list.twig
@@ -8,56 +8,36 @@
 <table class="table table-sm table-striped">
 	<thead>
 		<tr>
-			<th></th>
+			<th>Lot #</th>
+			<th>Lot Reference</th>
 			<th>Item ID</th>
-			<th colspan="2">Description</th>
+			<th>Item Description</th>
+			<th>Has Image?</th>
 		</tr>
 	</thead>
-	{% for item in inventory.getItemsDistinct() %}
-		<tr class="bg-gray border-top border-primary">
+	{% for lot in lots %}
+		<tr>
 			<td>
-				<button type="button" class="btn btn-light btn-sm" data-toggle="collapse" data-target=".{{ item.itemid|attrJS }}" aria-expanded="false" aria-controls=".{{ item.itemid|attrJS }}">
-					<i class="fa fa-plus" aria-hidden="true"></i>
-				</button>
+				<a href="{{ page.lotserialUrl(lot.lotnbr) }}" class="link">
+					{{ lot.lotnbr }}
+				</a>
 			</td>
-			<td>{{ item.itemid }}</td>
-			<td colspan="2">
+			<td>{{ lot.lotref }}</td>
+			<td>{{ lot.itemid }}</td>
+			<td>
 				<small>
-					{{ item.desc1 }} {{ item.desc2 ? ('<br>' ~ item.desc2)|raw : '' }}
+					{{ lot.item.desccription }} {{ lot.item.description2 ? ('<br>' ~ lot.item.description2)|raw : '' }}
 				</small>
 			</td>
-		</tr>
-		<tr class="collapse bg-light {{ item.itemid|attrJS }}">
-			<td></td>
 			<td>
-				<b>Lot #</b>
-			</td>
-			<td>
-				<b>Lot Qty</b>
-			</td>
-			<td>
-				<b>Has Image?</b>
+				{% if docm.hasImage(lot.lotnbr) %}
+					{% set image = docm.getImage(lot.lotnbr) %}
+					<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#image-modal" data-type="{{ docm.getFolders().description(image.folder) }}" data-id="{{ lotserial.lotserial }}" data-folder="{{ image.folder }}" data-file="{{ image.filename }}">
+						<i class="fa fa-picture-o" aria-hidden="true"></i>
+						<span class="sr-only">View Image</span>
+					</button>
+				{% endif %}
 			</td>
 		</tr>
-		{% for lotserial in inventory.getLotserialsDistinctByItemid(item.itemid) %}
-			<tr class="collapse {{ item.itemid|attrJS }}">
-				<td></td>
-				<td>
-					<a href="{{ page.lotserialUrl(lotserial.lotserial) }}" class="link">
-						{{ lotserial.lotserial }}
-					</a>
-				</td>
-				<td>{{ lotserial.qty }}</td>
-				<td>
-					{% if docm.hasImage(lotserial.lotserial) %}
-						{% set image = docm.getImage(lotserial.lotserial) %}
-						<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#image-modal" data-type="{{ docm.getFolders().description(image.folder) }}" data-id="{{ lotserial.lotserial }}" data-folder="{{ image.folder }}" data-file="{{ image.filename }}">
-							<i class="fa fa-picture-o" aria-hidden="true"></i>
-							<span class="sr-only">View Image</span>
-						</button>
-					{% endif %}
-				</td>
-			</tr>
-		{% endfor %}
 	{% endfor %}
 </table>
