--- a/site/templates/twig/cart/lookup/provalley/form.twig
+++ b/site/templates/twig/cart/lookup/provalley/form.twig
@@ -29,7 +29,7 @@
 		</div>
 		<div class="col-sm-1 col-6 mb-2 text-right">
 			<div class="form-group">
-				<label>Qty</label>
+				<label>Cases</label>
 				{% include 'util/bootstrap/form/input.twig' with {
 						'input': {
 							'name': 'qty',
