FIX: use config precision for price on lookup

--- a/site/templates/twig/cart/lookup/js/classes/Config.js.twig
+++ b/site/templates/twig/cart/lookup/js/classes/Config.js.twig
@@ -11,6 +11,18 @@ class LookupConfig {
 	constructor() {
 		this.custid = '{{ cart.getCustid() }}';
 		this.shiptoid = '{{ cart.getShiptoid() }}';
+		
+		this.fields = {
+			qty: {
+				precision: {{  cart.decimalPlacesQty() }}
+			},
+			price: {
+				precision: {{  cart.decimalPlacesPrice() }}
+			},
+			totalprice: {
+				precision: 2
+			}
+		}
 	}
 
 }
