--- a/site/templates/twig/sales-orders/sales-order/edit/lookup/js/classes/Config.js.twig
+++ b/site/templates/twig/sales-orders/sales-order/edit/lookup/js/classes/Config.js.twig
@@ -11,6 +11,14 @@ class LookupConfig {
 	constructor() {
 		this.custid = '{{ order.custid }}';
 		this.shiptoid = '{{ order.shiptoid }}';
+		this.fields = {
+			price: {
+				precision: {{ eso.decimal_places_price() }}
+			},
+			qty: {
+				precision: {{ eso.decimal_places_qty() }}
+			},
+		}
 	}
 
 }
