--- a/site/templates/twig/sales-orders/sales-order/edit/js/classes.js.twig
+++ b/site/templates/twig/sales-orders/sales-order/edit/js/classes.js.twig
@@ -1,1 +1,2 @@
 {% include 'sales-orders/sales-order/edit/js/classes/Alerts.js.twig' %}
+{% include 'sales-orders/sales-order/edit/js/classes/Config.js.twig' %}
