FEAT: handle SO freight addon

--- a/site/templates/twig/cart/js/classes/Config.js.twig
+++ b/site/templates/twig/cart/js/classes/Config.js.twig
@@ -1,3 +1,5 @@
+{% set customer = cart.getCustomer() %}
+
 class CartConfig {
 	static instance = null;
 
@@ -9,6 +11,7 @@ class CartConfig {
 	}
 
 	constructor() {
+		this.addToPrice = {{ customer.hasFreightRateCode() ?  customer.soFreightRate.addon : 0.00 }},
 		this.fields = {
 			qty: {
 				precision: {{  cart.decimalPlacesQty() }}
