--- a/site/templates/twig/cart/lookup/js/classes/Form.js.twig
+++ b/site/templates/twig/cart/lookup/js/classes/Form.js.twig
@@ -33,6 +33,7 @@ class LookupForm {
 					form.updatePricing(function() {
 						$('#loading-modal').modal('hide');
 						var price = parseFloat(inputs.price.val());
+						price += parseFloat(config.addToPrice);
 						inputs.price.val(price.toFixed(form.config.fields.price.precision));
 
 						if (inputs.qty.val() == '') {
@@ -87,14 +88,15 @@ class LookupForm {
 		}
 
 		var qty   = parseFloat(inputs.qty.val());
-		var price = pricing.price;
+		var price = parseFloat(pricing.price);
 
 		pricing.pricebreaks.forEach(pricebreak => {
 			if (qty >= parseFloat(pricebreak.qty)) {
 				price = pricebreak.price;
 			}
 		});
-		inputs.price.val(price);
+		price += parseFloat(config.addToPrice);
+		inputs.price.val(price.toFixed(form.config.fields.price.precision));
 		callback();
 	}
 
