--- a/site/templates/twig/warehouse/picking/unguided/order/actions.twig
+++ b/site/templates/twig/warehouse/picking/unguided/order/actions.twig
@@ -1,5 +1,5 @@
 <div class="form-group d-flex justify-content-between align-items-center">
-	<a href="#" class="btn btn-success">
+	<a href="{{ page.finishOrderUrl(ordn) }}" class="btn btn-success">
 		<i class="fa fa-floppy-o" aria-hidden="true"></i> Finish Picking
 	</a>
 	<a href="{{ page.exitOrderUrl(ordn) }}" class="btn btn-danger exit-order">
