--- a/site/templates/twig/warehouse/inventory/bin-inquiry/results/display.twig
+++ b/site/templates/twig/warehouse/inventory/bin-inquiry/results/display.twig
@@ -13,6 +13,10 @@
 			<i class="fa fa-print" aria-hidden="true"></i> Print
 		</a>
 		&nbsp;
+		<a href="{{ input.url() }}" class="btn btn-primary">
+			<i class="fa fa-arrow-left" aria-hidden="true"></i> Search
+		</a>
+		&nbsp;
 		<button class="btn btn-secondary show-hide-all">Show / Hide All</button>
 	</div>
 {% endif %}
