--- a/site/templates/twig/code-tables/mar/crtm/js/classes.js.twig
+++ b/site/templates/twig/code-tables/mar/crtm/js/classes.js.twig
@@ -1,5 +1,5 @@
 {% include 'code-tables/js/classes/Alerts.js.twig' %}
 {% include 'code-tables/js/classes/Inputs.js.twig' %}
 {% include 'code-tables/js/classes/Form.js.twig' %}
-{% include 'code-tables/js/classes/Configs.js.twig' with {'manager': ccm} %}
-{% include 'code-tables/mar/ccm/js/classes/Requests.js.twig' %}
+{% include 'code-tables/js/classes/Configs.js.twig' with {'manager': crtm} %}
+{% include 'code-tables/mar/crtm/js/classes/Requests.js.twig' %}
